Bug 1520722 Part 2 - When removing bidi continuations, go no further than the block which needs resolution. r=dbaron

When doing bidi resolution for column-content blocks, we may still
traverse the parent chain up in RemoveBidiContinuation, reach
nsColumnSetFrame, and accidentally convert nsColumnSetFrame's
continuation into fluid ones.

Differential Revision: https://phabricator.services.mozilla.com/D17551